configures google cloud build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 
-  'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE_NAME}', 
+  'us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}', 
   '.' ]
-  env: 
-    - 'IMAGE_NAME=${_IMAGE_NAME}'
 
 - name: node
   entrypoint: npm
@@ -17,16 +15,12 @@ steps:
   args: ['prisma','migrate','deploy']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE_NAME}:latest']
-  env: 
-    - 'IMAGE_NAME=${_IMAGE_NAME}'
+  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}:latest']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
   args: [gcloud,'run','services','update','nestjs-starter',
-  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE_NAME}:latest',
+  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}:latest',
   '--region=us-east4']
-  env: 
-    - 'IMAGE_NAME=${_IMAGE_NAME}'
 
 timeout: "1600s"
 
