--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 
-  'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE}', 
+  'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${SERVICE_NAME}', 
   '.' ]
   env: 
-    - 'IMAGE=${_IMAGE}'
+    - 'SERVICE_NAME=${_SERVICE_NAME}'
 
 - name: node
   entrypoint: npm
@@ -17,16 +17,16 @@ steps:
   args: ['prisma','migrate','deploy']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE}:latest']
+  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${SERVICE_NAME}:latest']
   env: 
-    - 'IMAGE=${_IMAGE}'
+    - 'SERVICE_NAME=${_SERVICE_NAME}'
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
   args: [gcloud,'run','services','update','nestjs-starter',
-  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${IMAGE}:latest',
+  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${SERVICE_NAME}:latest',
   '--region=us-east4']
   env: 
-    - 'IMAGE=${_IMAGE}'
+    - 'SERVICE_NAME=${_SERVICE_NAME}'
 
 timeout: "1600s"
 
