fixes docker image repo name

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 
-  'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${_SERVICE_NAME}', 
+  'us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}', 
   '.' ]
 
 - name: node
@@ -15,11 +15,11 @@ steps:
   args: ['prisma','migrate','deploy']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${_SERVICE_NAME}:latest']
+  args: [ 'push', 'us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}:latest']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
   args: [gcloud,'run','services','update','nestjs-starter',
-  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/docker-images/${_SERVICE_NAME}:latest',
+  '--image=us-east4-docker.pkg.dev/${PROJECT_ID}/imgs/${_SERVICE_NAME}:latest',
   '--region=us-east4']
 
 timeout: "1600s"
