--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-starter",
+  "name": "graphql-starter",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -14,26 +14,31 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --verbose",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "graphql:codegen": "graphql codegen",
+    "graphql:diff": "graphql diff",
+    "graphql:similar": "graphql similar",
     "prisma:migrate": "npx prisma migrate dev",
     "create:env": "echo DATABASE_URL=$DATABASE_URL > .env"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.16",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.16",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.1",
+    "apollo-server-express": "^3.9.0",
+    "graphql": "^16.5.0",
+    "graphql-tools": "^8.2.12",
     "@prisma/client": "^3.15.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.4.0"
+    "ts-morph": "^15.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
