--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-starter",
+  "name": "sandlot-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -35,6 +35,8 @@
     "graphql": "^16.5.0",
     "graphql-tools": "^8.2.12",
     "@prisma/client": "^3.15.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
